# Text-Edit-With-Clang-Code-Completion

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README  README.md  README_design.md  README_docker.md  index.html  texteditwithclangcodecompletion.cpp
.github/: constants.env
.github/workflows/: ci.yml  codeql-analysis.yml  template-janitor.yml  wasm.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Emscripten.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  VCEnvironment.cmake
configured_files/: config.hpp.in
src/: CMakeLists.txt  emscripten_stubs.cpp
texteditwithclangcodecompletion/: index.html  texteditwithclangcodecompletion.js
